--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,18 +6,15 @@ micronaut:
     port: 80
   security:
     authentication: bearer
-  endpoints:
-    login:
-      enabled: true
-      path: "/micronaut/v1/login"
-    token:
-      jwt:
-        signatures:
-          secret:
-            generator:
-              secret: "${JWT_GENERATOR_SIGNATURE_SECRET:BB36D3765316D495DCDCC5B86DF45}"
-
-
+  token:
+    jwt:
+      signatures:
+        secret:
+          generator:
+            secret: "${JWT_GENERATOR_SIGNATURE_SECRET:BB36D3765316D495DCDCC5B86DF45}"
+            base64: true
+            access-token:
+              expiration: 60
 
 ### aws ###
 aws:
