adding application image in docker compose and externalizing aws properties

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 
 services:
+  poc-micronaut:
+    image: poc_micronaut_service:1.0
+    ports:
+      - "80:80"
+    environment:
+      - JWT_GENERATOR_SIGNATURE_SECRET=BB36D3765316D495DCDCC5B86DF45
+      - AWS_KEY_ID=id
+      - AWS_SECRET_KEY=secret-key
+      - AWS_SESSION_TOKEN=token
+      - AWS_REGION=eu-west-1
+      - AWS_ENDPOINT=http://dynamodb:8000
   dynamodb:
     image: instructure/dynamo-local-admin
     container_name: dynamodb-db
@@ -9,7 +20,12 @@ services:
       - AWS_SECRET_ACESS_KEY=secret
     ports:
       - "8000:8000"
+    volumes:
+    - dynamodb_data:/home/dynamodblocal/data
   consul:
     image: bitnami/consul:latest
     ports:
       - "8500:8500"
+volumes:
+  dynamodb_data:
+    driver: local
