--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,15 +11,15 @@ micronaut:
       signatures:
         secret:
           generator:
-            secret: "${JWT_GENERATOR_SIGNATURE_SECRET:BB36D3765316D495DCDCC5B86DF45}"
+            secret: ${JWT_GENERATOR_SIGNATURE_SECRET:BB36D3765316D495DCDCC5B86DF45}
             base64: true
             access-token:
               expiration: 60
 
 ### aws ###
 aws:
-  accessKeyId: "${AWS_KEY_ID:id}"
-  secretKey: "${AWS_SECRET_KEY:secret-key}"
-  sessionToken: "${AWS_SESSION_TOKEN:token}"
-  region: "${AWS_REGION:eu-west-1}"
-  endpoint: "${AWS_ENDPOINT:http://localhost:8000}"
+  accessKeyId: ${AWS_KEY_ID:id}
+  secretKey: ${AWS_SECRET_KEY:secret-key}
+  sessionToken: ${AWS_SESSION_TOKEN:token}
+  region: ${AWS_REGION:eu-west-1}
+  endpoint: http://${AWS_HOST:localhost}:${AWS_PORT:4566}
