--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -26,13 +26,24 @@ services:
     image: localstack/localstack
     environment:
       - SERVICES=dynamodb
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - AWS_ACCESS_KEY_ID=id
+      - AWS_SECRET_ACCESS_KEY=secret-key
+      - USE_SSL=0
     ports:
     - "4566:4566"
+    - "8089:8080"
+    volumes:
+      #manter os dados salvos
+      -  ./tmp:/tmp/localstack
+      #pasta onde script ficam e são inicializados em ordem alfabética
+      - ./script:/docker-entrypoint-initaws.d
 
   localstack-setup:
     build:
-      context: ../local
+      context: .
       dockerfile: Dockerfile.localstack
+    image: localstack-setup
     depends_on:
       - localstack
 #  consul:
