fix table.json and script for create table in dynamodn

--- a/local/Dockerfile.localstack
+++ b/local/Dockerfile.localstack
@@ -9,4 +9,4 @@ COPY --chown=root:root ./localstack/files .
 
 RUN chmod +x create-resources.sh
 
-CMD ["setup/create-resource.sh"]
+ENTRYPOINT [ "/setup/create-resources.sh" ]
